--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+jar {
+    baseName = 'jb-hello-world'
+    version = '0.1.0'
+}
 
 dependencies {
     // JUnit Jupiter API and Engine
